2009-07-22  Kaz Kojima  <kkojima@gcc.gnu.org>

	Backport from mainline:
	2009-07-15  Eric Botcazou  <ebotcazou@adacore.com>

	PR rtl-optimization/40710
	* resource.c (mark_target_live_regs): Reset DF problem to LR.

2009-07-22  Richard Guenther  <rguenther@suse.de>

	PR tree-optimization/40321
	* tree-ssa-pre.c (add_to_exp_gen): Also add names defined by
	PHI nodes to the maximal set.
	(make_values_for_phi): Add PHI arguments to the maximal set.
	(execute_pre): Dump PHI_GEN and the maximal set.

2009-07-22  Jakub Jelinek  <jakub@redhat.com>

	* BASE-VER: Set to 4.4.2.
	* DEV-PHASE: Set to prerelease.

2009-07-22  Release Manager

	* GCC 4.4.1 released.

2009-07-21  Jakub Jelinek  <jakub@redhat.com>

	PR tree-optimization/40813
	* tree-inline.c (copy_bb): Regimplify RHS after last stmt, not before
	it.

2009-07-21  Uros Bizjak  <ubizjak@gmail.com>

	Backport from mainline:
	2009-04-29  Richard Guenther  <rguenther@suse.de>
  
	PR target/39943
	* config/i386/i386.c (ix86_vectorize_builtin_conversion): Only
	allow conversion to signed integers.

2009-07-20  Jakub Jelinek  <jakub@redhat.com>

	PR tree-optimization/40792
	* tree.c (build_function_type_skip_args): Remove bogus assert.

2009-07-17  Jakub Jelinek  <jakub@redhat.com>

	PR c++/40780
	* gimplify.c (gimplify_conversion): Don't change non-conversions into
	VIEW_CONVERT_EXPR.

2009-07-15  Jakub Jelinek  <jakub@redhat.com>

	PR middle-end/40747
	* fold-const.c (fold_cond_expr_with_comparison): When folding
	< and <= to MIN, make sure the MIN uses the same type as the
	comparison's operands.

2009-07-12  Kai Tietz  <kai.tietz@onevision.com>

	* config/i386/cygming.h (TARGET_OS_CPP_BUILTINS): Define _X86_
	just for 32-bit case.

2009-07-11  Jakub Jelinek  <jakub@redhat.com>

	PR rtl-optimization/40667
	* defaults.h (MINIMUM_ALIGNMENT): Define if not defined.
	* doc/tm.texi (MINIMUM_ALIGNMENT): Document it.
	* config/i386/i386.h (MINIMUM_ALIGNMENT): Define.